@@ -1,0 +1,15 @@
+// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 4 -*-
+
+# ifndef DTN1_HPP
+# define DTN1_HPP
+
+# include <Rcpp.h>
+
+double dtn1(const double x,
+            const double mean,
+            const double sd,
+            const double low,
+            const double high
+            ) ;
+
+# endif
